<resources>
    <string name="app_name">yoel_beta</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Login for</string>
    <string name="sign_in2">"Welcome back you've been missed!"</string>
    <string name="email">Type your email</string>
    <string name="username">Type your username</string>
    <string name="pass">Type your password</string>
    <string name="repass">Retype your password</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_tasks">Tasks</string>
    <string name="title_settings">Settings</string>
</resources>