<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".fragments.SignInFragment"
        tools:viewBindingIgnore="false">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">
            <ImageView
                android:id="@+id/image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:contentDescription="@string/sign_in"
                android:src="@drawable/logo_reg2" />
        </androidx.appcompat.widget.LinearLayoutCompat>
        <TextView
            android:id="@+id/text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:alpha="0.5"
            android:fontFamily="@font/jost_regular"
            android:text="@string/sign_in2"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text1" />
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardView1"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp"
            app:cardUseCompatPadding="true"
            app:strokeWidth="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView0"
            app:strokeColor="@color/bg_load">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintEnabled="false"
                app:placeholderTextColor="@color/bg_load">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailEt"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/white"
                    android:fontFamily="@font/jost_regular"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingStart="12dp"
                    android:paddingTop="15dp"
                    android:textColor="@color/bg_load"
                    android:textSize="18dp" />
            </com.google.android.material.textfield.TextInputLayout>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardView0"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp"
            app:cardUseCompatPadding="true"
            app:strokeWidth="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text2"
            app:strokeColor="@color/bg_load">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintEnabled="false"
                app:placeholderTextColor="@color/bg_load">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/white"
                    android:fontFamily="@font/jost_regular"
                    android:hint="@string/username"
                    android:paddingStart="12dp"
                    android:paddingTop="15dp"
                    android:textColor="@color/bg_load"
                    android:textSize="18dp" />
            </com.google.android.material.textfield.TextInputLayout>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardView2"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardView1"
            app:strokeColor="@color/bg_load"
            app:strokeWidth="1dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true"
                app:placeholderTextColor="@color/bg_load">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passEt"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/white"
                    android:fontFamily="@font/jost_regular"
                    android:hint="@string/pass"
                    android:inputType="textPassword"
                    android:paddingStart="12dp"
                    android:paddingTop="15dp"
                    android:textColor="@color/bg_load"
                    android:textSize="18dp" />
            </com.google.android.material.textfield.TextInputLayout>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardView3"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardView2"
            app:strokeColor="@color/bg_load"
            app:strokeWidth="1dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true"
                app:placeholderTextColor="@color/bg_load">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/verifyPassEt"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/white"
                    android:fontFamily="@font/jost_regular"
                    android:hint="@string/repass"
                    android:inputType="textPassword"
                    android:paddingStart="12dp"
                    android:paddingTop="15dp"
                    android:textColor="@color/bg_load"
                    android:textSize="18dp" />
            </com.google.android.material.textfield.TextInputLayout>
        </com.google.android.material.card.MaterialCardView>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/imageloader"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:background="@drawable/btn_style"
            android:fontFamily="@font/jost_medium"
            android:text="Photo"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView3">

        </androidx.appcompat.widget.AppCompatButton>
        <TextView
            android:id="@+id/pathimageuri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="123"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageloader"
            >

        </TextView>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/logBtn"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/btn_style"
            android:fontFamily="@font/jost_medium"
            android:text="Create Account"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageloader">

        </androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logBtn">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Already have account?"
                android:fontFamily="@font/jost_regular"
                android:textSize="14dp"/>

            <TextView
                android:id="@+id/authTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Log in"
                android:fontFamily="@font/jost_regular"
                android:textSize="14dp"
                android:textColor="@color/bg_load"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>